--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "analyze:lint": "eslint --ext .jsx --ext .js .",
-    "fix:lint": "eslint --ext .jsx --ext .js . --fix"
+    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "gatsby": "^2.13.9",
-    "gatsby-plugin-netlify-cms": "^4.1.1",
-    "netlify-cms-app": "^2.9.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "gatsby-plugin-manifest": "2.2.1",
+    "gatsby-plugin-netlify-cms": "^4.1.1",
     "gatsby-plugin-postcss": "2.1.0",
     "gatsby-plugin-purgecss": "4.0.0",
     "gatsby-plugin-react-helmet": "3.1.0",
     "graphql": "14.4.2",
+    "netlify-cms-app": "^2.9.5",
+    "patch-package": "^6.1.2",
     "prop-types": "15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "5.2.1"
   },
   "devDependencies": {
